Update tui emacs color

--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -20,11 +20,24 @@ Setting font family
                            ))
 #+end_src
 
+Disable all bold font
+#+begin_src emacs-lisp
+(after! doom-themes
+  ;; (set-face-attribute 'bold nil :weight 'light)
+  (mapc
+   (lambda (face)
+     (when (eq (face-attribute face :weight) 'bold)
+       (set-face-attribute face nil :weight 'normal)))
+   (face-list))
+  ;; (setq doom-themes-enable-bold nil)
+  )
+#+end_src
+
 Disable bold numbers
 #+begin_src emacs-lisp
-(after! highlight-numbers
-  (set-face-bold 'highlight-numbers-number nil)
-  )
+;; (after! highlight-numbers
+;;   (set-face-bold 'highlight-numbers-number nil)
+;;   )
 #+end_src
 
 ** Theme
@@ -41,6 +54,9 @@ Change comment color and line number color for the TUI
   (set-face-foreground 'line-number "#a8a8a8")
   (set-face-foreground 'font-lock-doc-face "#c6c6c6")
   (set-face-background 'default "undefined")
+
+  (set-face-background 'hl-line "#524867")
+  (set-face-background 'region "#524867")
   )
 #+end_src
 ** Line
@@ -148,8 +164,16 @@ Setting LSP
    lsp-signature-auto-activate nil ; really annoying
    lsp-log-io nil ; increases performance
    lsp-idle-delay 0.5
+   )
+
+  (unless (display-graphic-p)
+
+
+    (set-face-background 'lsp-face-highlight-read "#66bbff")
+    (set-face-background 'lsp-face-highlight-textual "#66bbff")
+    (set-face-background 'lsp-face-highlight-write "#66bbff")
+    )
   )
-)
 (after! lsp-ui
   (lsp-ui-sideline-mode -1) ; flycheck is better
   (setq
@@ -168,7 +192,7 @@ Setting LSP
   )
 #+end_src
 
-*** Python
+*** TODO Python
 Setting lsp settings for pyright
 #+begin_src emacs-lisp
 (after! lsp-pyright
@@ -177,28 +201,28 @@ Setting lsp settings for pyright
         lsp-pyright-use-library-code-for-types t
         lsp-pyright-diagnostic-mode "workspace"
         )
-  (lsp-register-client
-    (make-lsp-client
-      :new-connection (lsp-tramp-connection (lambda ()
-                                      (cons "pyright-langserver"
-                                            lsp-pyright-langserver-command-args)))
-      :major-modes '(python-mode)
-      :remote? t
-      :server-id 'pyright-remote
-      :multi-root t
-      :priority 3
-      :initialization-options (lambda () (ht-merge (lsp-configuration-section "pyright")
-                                                   (lsp-configuration-section "python")))
-      :initialized-fn (lambda (workspace)
-                        (with-lsp-workspace workspace
-                          (lsp--set-configuration
-                          (ht-merge (lsp-configuration-section "pyright")
-                                    (lsp-configuration-section "python")))))
-      :download-server-fn (lambda (_client callback error-callback _update?)
-                            (lsp-package-ensure 'pyright callback error-callback))
-      :notification-handlers (lsp-ht ("pyright/beginProgress" 'lsp-pyright--begin-progress-callback)
-                                    ("pyright/reportProgress" 'lsp-pyright--report-progress-callback)
-                                    ("pyright/endProgress" 'lsp-pyright--end-progress-callback))))
+  ;; (lsp-register-client
+  ;;   (make-lsp-client
+  ;;     :new-connection (lsp-tramp-connection (lambda ()
+  ;;                                     (cons "pyright-langserver"
+  ;;                                           lsp-pyright-langserver-command-args)))
+  ;;     :major-modes '(python-mode)
+  ;;     :remote? t
+  ;;     :server-id 'pyright-remote
+  ;;     :multi-root t
+  ;;     :priority 3
+  ;;     :initialization-options (lambda () (ht-merge (lsp-configuration-section "pyright")
+  ;;                                                  (lsp-configuration-section "python")))
+  ;;     :initialized-fn (lambda (workspace)
+  ;;                       (with-lsp-workspace workspace
+  ;;                         (lsp--set-configuration
+  ;;                         (ht-merge (lsp-configuration-section "pyright")
+  ;;                                   (lsp-configuration-section "python")))))
+  ;;     :download-server-fn (lambda (_client callback error-callback _update?)
+  ;;                           (lsp-package-ensure 'pyright callback error-callback))
+  ;;     :notification-handlers (lsp-ht ("pyright/beginProgress" 'lsp-pyright--begin-progress-callback)
+  ;;                                   ("pyright/reportProgress" 'lsp-pyright--report-progress-callback)
+  ;;                                   ("pyright/endProgress" 'lsp-pyright--end-progress-callback))))
   )
 #+end_src
 
