Update color scheme

--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -24,12 +24,12 @@ Disable all bold font
 #+begin_src emacs-lisp
 (after! doom-themes
   ;; (set-face-attribute 'bold nil :weight 'light)
-  (mapc
-   (lambda (face)
-     (when (eq (face-attribute face :weight) 'bold)
-       (set-face-attribute face nil :weight 'normal)))
-   (face-list))
-  ;; (setq doom-themes-enable-bold nil)
+  ;; (mapc
+  ;;  (lambda (face)
+  ;;    (when (eq (face-attribute face :weight) 'bold)
+  ;;      (set-face-attribute face nil :weight 'normal)))
+  ;;  (face-list))
+  (setq doom-themes-enable-bold nil)
   )
 #+end_src
 
@@ -57,6 +57,7 @@ Change comment color and line number color for the TUI
 
   (set-face-background 'hl-line "#524867")
   (set-face-background 'region "#524867")
+  (set-face-background 'markdown-code-face "#1c1c1c")
   )
 #+end_src
 ** Line
@@ -196,7 +197,7 @@ Setting LSP
 Setting lsp settings for pyright
 #+begin_src emacs-lisp
 (after! lsp-pyright
-  (setq lsp-pyright-python-executable-cmd "python"
+  (setq lsp-pyright-python-executable-cmd "python3"
         lsp-pyright-multi-root nil
         lsp-pyright-use-library-code-for-types t
         lsp-pyright-diagnostic-mode "workspace"
@@ -278,13 +279,13 @@ General python settings and keybindings
 #+begin_src emacs-lisp
 (after! python
   ;; set shell
-  (setq python-shell-interpreter "python"
+  (setq python-shell-interpreter "python3"
         ;; python-shell-interpreter-args "--simple-prompt"
         python-shell-prompt-detect-failure-warning nil)
-  (add-to-list 'python-shell-completion-native-disabled-interpreters "python")
+  (add-to-list 'python-shell-completion-native-disabled-interpreters "python3")
 
   ;; NOTE: reenable lsp after format, local hook
-  (add-hook 'python-mode-hook (lambda() (add-hook 'after-save-hook #'lsp nil t)))
+  ;; (add-hook 'python-mode-hook (lambda() (add-hook 'after-save-hook #'lsp nil t)))
 
   ;; keybindings
   (map!
