--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -14,9 +14,8 @@ Setting name and email address
 ** Font
 Setting font family
 #+begin_src emacs-lisp
-(setq doom-font (font-spec :family "Fira Code"
+(setq doom-font (font-spec :family "Fira Code Light"
                            :size 13
-                           :weight 'light
                            ))
 #+end_src
 
@@ -50,9 +49,9 @@ Dracula is my personal favorite
 Change comment color and line number color for the TUI
 #+begin_src emacs-lisp
 (unless (display-graphic-p)
-  ;;   (set-face-foreground 'font-lock-comment-face "#a8a8a8")
-  ;;   (set-face-foreground 'line-number "#a8a8a8")
-  ;;   (set-face-foreground 'font-lock-doc-face "#c6c6c6")
+    (set-face-foreground 'font-lock-comment-face "#a8a8a8")
+    (set-face-foreground 'line-number "#a8a8a8")
+    (set-face-foreground 'font-lock-doc-face "#c6c6c6")
   ;;   (set-face-background 'default "undefined")
 
   (set-face-background 'region "#524867")
@@ -61,6 +60,12 @@ Change comment color and line number color for the TUI
     (set-face-background 'lsp-face-highlight-textual "#66bbff")
     (set-face-background 'lsp-face-highlight-write "#66bbff")
     (set-face-background 'markdown-code-face "#1c1c1c")
+    )
+  (after! magit
+    (set-face-background 'magit-diff-removed-highlight "undefined")
+    (set-face-background 'magit-diff-added-highlight "undefined")
+    (set-face-background 'magit-diff-removed "undefined")
+    (set-face-background 'magit-diff-added "undefined")
     )
   )
 #+end_src
@@ -77,7 +82,7 @@ Toggle settings
  :leader
  :desc "Toggle Comment" "c SPC" (lambda ()(interactive)(evilnc-comment-or-uncomment-lines -1))
  :desc "Toggle Terminal" "j" (lambda ()(interactive)(+popup/toggle))
- :desc "Toggle line highlight" "t H" #'global-hl-line-mode
+ :desc "Toggle line highlight" "t h" #'global-hl-line-mode
  )
 #+end_src
 
@@ -415,9 +420,9 @@ Minimized the popup factor of format error
 
 Use yapf formatting for python
 #+begin_src emacs-lisp
-;; (after! format-all
-;;   (set-formatter! 'yapf "yapf -q " :modes'(python-mode))
-;;   )
+(after! format-all
+  (set-formatter! 'yapf "yapf -q " :modes'(python-mode))
+  )
 #+end_src
 ** Tree Sitter
 Tree sitter is used to give semantic highlighting to code.
@@ -452,6 +457,8 @@ Tree sitter is used to give semantic highlighting to code.
                                           (pcase capture-name
                                             ("method.call" 'font-lock-function-name-face)
                                             ("function.call" 'font-lock-function-name-face)
+                                            ("variable.parameter" 'default)
+                                            ("constant" 'default)
                                             )))))
          )
   )
