Change TUI emacs theme

--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -19,19 +19,6 @@ Setting font family
                            ))
 #+end_src
 
-Disable all bold font
-#+begin_src emacs-lisp
-(after! doom-themes
-  ;; (set-face-attribute 'bold nil :weight 'light)
-  ;; (mapc
-  ;;  (lambda (face)
-  ;;    (when (eq (face-attribute face :weight) 'bold)
-  ;;      (set-face-attribute face nil :weight 'normal)))
-  ;;  (face-list))
-  (setq doom-themes-enable-bold nil)
-  )
-#+end_src
-
 Disable bold numbers
 #+begin_src emacs-lisp
 ;; (after! highlight-numbers
@@ -44,22 +31,34 @@ Dracula is my personal favorite
 #+begin_src emacs-lisp
 (setq doom-theme 'dracula)
 ;; (setq doom-dracula-brighter-comments t)
+
+(after! doom-themes
+  ;; (set-face-attribute 'bold nil :weight 'light)
+  ;; (mapc
+  ;;  (lambda (face)
+  ;;    (when (eq (face-attribute face :weight) 'bold)
+  ;;      (set-face-attribute face nil :weight 'normal)))
+  ;;  (face-list))
+  (setq doom-themes-enable-bold nil)
+  )
 #+end_src
 
 Change comment color and line number color for the TUI
 #+begin_src emacs-lisp
 (unless (display-graphic-p)
-    (set-face-foreground 'font-lock-comment-face "#a8a8a8")
-    (set-face-foreground 'line-number "#a8a8a8")
-    (set-face-foreground 'font-lock-doc-face "#c6c6c6")
-  ;;   (set-face-background 'default "undefined")
+  (set-face-foreground 'font-lock-comment-face "#a8a8a8")
+  (set-face-foreground 'line-number "#a8a8a8")
+  (set-face-foreground 'font-lock-doc-face "#c6c6c6")
+  (set-face-background 'default "undefined")
 
   (set-face-background 'region "#524867")
   (after! lsp-mode
-    (set-face-background 'lsp-face-highlight-read "#acebfb")
-    (set-face-background 'lsp-face-highlight-textual "#acebfb")
-    (set-face-background 'lsp-face-highlight-write "#acebfb")
-    (set-face-background 'markdown-code-face "#1c1c1c")
+    (set-face-background 'lazy-highlight "#524867")
+    (set-face-foreground 'lazy-highlight "#f8f8f2")
+    (set-face-background 'lsp-face-highlight-textual "#524867")
+    (set-face-foreground 'lsp-face-highlight-textual "#f8f8f2")
+    ;; (set-face-background 'markdown-code-face "#1c1c1c")
+    (set-face-background 'markdown-code-face "undefined")
     )
   (after! magit
     (set-face-background 'magit-diff-removed-highlight "undefined")
