Add suring keys

--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -172,6 +172,8 @@ Setting LSP
    lsp-signature-auto-activate nil ; really annoying
    lsp-log-io nil ; increases performance
    lsp-idle-delay 0.5
+   lsp-enable-symbol-highlighting nil
+   lsp-eldoc-enable-hover nil
    )
 
   )
@@ -385,7 +387,11 @@ Org settings. Make sure the latex preview is high definition SVG
 (after! org
   ;;adjust the scale of latex preview
   (plist-put org-format-latex-options :scale 1.1)
+  ;; higher resolution preview
   (setq org-preview-latex-default-process 'dvisvgm)
+
+  ;; markdown export
+  ;; (setq org-pandoc-format-extensions '(markdown_github+pipe_tables+raw_html))
   (map!
    :map org-mode-map
    :localleader
@@ -447,17 +453,6 @@ Tree sitter is used to give semantic highlighting to code.
          (python-mode . tree-sitter-hl-mode)
          (jupyter-repl-mode . tree-sitter-hl-mode)
          (inferior-python-mode . tree-sitter-hl-mode)
-
-         ;; make method call and function call the same color as function name
-         ;; (prog-mode . (lambda ()
-         ;;                  (add-function :before-until (local 'tree-sitter-hl-face-mapping-function)
-         ;;                                (lambda (capture-name)
-         ;;                                  (pcase capture-name
-         ;;                                    ;; ("method.call" 'font-lock-function-name-face)
-         ;;                                    ;; ("function.call" 'font-lock-function-name-face)
-         ;;                                    ;; ("variable.parameter" 'default)
-         ;;                                    ;; ("constant" 'default)
-         ;;                                    )))))
          )
   )
 #+end_src
