Fix kitty line height

--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -71,7 +71,13 @@ Change comment color and line number color for the TUI
 ** Line
 Use relative line number
 #+begin_src emacs-lisp
-(setq display-line-numbers-type 'relative)
+(setq display-line-numbers-type 'visual)
+;; Make evil-mode up/down operate in screen lines instead of logical lines
+(define-key evil-motion-state-map "j" 'evil-next-visual-line)
+(define-key evil-motion-state-map "k" 'evil-previous-visual-line)
+;; Also in visual mode
+(define-key evil-visual-state-map "j" 'evil-next-visual-line)
+(define-key evil-visual-state-map "k" 'evil-previous-visual-line)
 #+end_src
 
 ** Keybindings
