--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -450,6 +450,9 @@ Tree sitter is used to give semantic highlighting to code.
    :leader
    :desc "Toggle tree-sitter" "t t" #'toggle-tree-sitter
    )
+  (add-hook! 'tree-sitter-after-on-hook
+    (add-hook! 'iedit-mode-hook :local (tree-sitter-mode -1))
+    (add-hook! 'iedit-mode-end-hook :local (tree-sitter-hl-mode)))
   :config
   (require 'tree-sitter-langs)
   ;; Treat jupyter and python shell as python
@@ -514,5 +517,15 @@ Disable long summary warning
 #+begin_src emacs-lisp
 (after! magit
   (setq git-commit-style-convention-checks nil)
+  )
+#+end_src
+
+** LeetCode
+#+begin_src emacs-lisp
+(after! leetcode
+  (setq leetcode-prefer-language "python3"
+        leetcode-save-solutions t
+        leetcode-directory "~/leetcode"
+        )
   )
 #+end_src
