--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -48,25 +48,25 @@ Dracula is my personal favorite
 Change comment color and line number color for the TUI
 #+begin_src emacs-lisp
 
-(unless (display-graphic-p)
-  (set-face-foreground 'font-lock-comment-face "#a8a8a8")
-  (set-face-foreground 'line-number "#a8a8a8")
-  (set-face-foreground 'font-lock-doc-face "#c6c6c6")
-  (set-face-background 'default "unspecfied")
+;;(unless (display-graphic-p)
+  ;; (set-face-foreground 'font-lock-comment-face "#a8a8a8")
+  ;; (set-face-foreground 'line-number "#a8a8a8")
+  ;; (set-face-foreground 'font-lock-doc-face "#c6c6c6")
+  ;; (set-face-background 'default "unspecfied")
 
-  (set-face-attribute 'region nil :background "#524867")
-  (set-face-attribute 'lazy-highlight nil :foreground "#f8f8f2" :background "#524867")
-  (after! lsp-mode
-    (set-face-attribute 'lsp-face-highlight-textual nil :foreground "#f8f8f2" :background "#524867" :weight 'normal)
-    (set-face-background 'markdown-code-face "unspecified")
-    )
-  (after! magit
-    (set-face-background 'magit-diff-removed-highlight "unspecified")
-    (set-face-background 'magit-diff-added-highlight "unspecified")
-    (set-face-background 'magit-diff-removed "unspecified")
-    (set-face-background 'magit-diff-added "unspecified")
-    )
-  )
+  ;; (set-face-attribute 'region nil :background "#524867")
+  ;; (set-face-attribute 'lazy-highlight nil :foreground "#f8f8f2" :background "#524867")
+  ;; (after! lsp-mode
+  ;;   (set-face-attribute 'lsp-face-highlight-textual nil :foreground "#f8f8f2" :background "#524867" :weight 'normal)
+  ;;   (set-face-background 'markdown-code-face "unspecified")
+  ;;   )
+  ;; (after! magit
+  ;;   (set-face-background 'magit-diff-removed-highlight "unspecified")
+  ;;   (set-face-background 'magit-diff-added-highlight "unspecified")
+  ;;   (set-face-background 'magit-diff-removed "unspecified")
+  ;;   (set-face-background 'magit-diff-added "unspecified")
+  ;;   )
+  ;;)
 #+end_src
 
 ** Line
@@ -442,12 +442,17 @@ Minimized the popup factor of format error
 (set-popup-rule! "^\\*format-all" :size 0.01 :ttl 0 :modeline nil)
 #+end_src
 
-Use yapf formatting for python
+Enabled formatting for the following modes. Use yapf formatting for python
 #+begin_src emacs-lisp
-;; (after! format-all
-;;   (set-formatter! 'yapf "yapf -q " :modes'(python-mode))
-;;   )
+(after! format-all
+  ;;   (set-formatter! 'yapf "yapf -q " :modes'(python-mode))
+  (add-hook 'python-mode-hook #'format-all-mode)
+  (add-hook 'emacs-lisp-mode #'format-all-mode)
+  (add-hook 'tex-mode #'format-all-mode)
+  (add-hook 'latex-mode #'format-all-mode)
+  )
 #+end_src
+
 ** Tree Sitter
 Tree sitter is used to give semantic highlighting to code.
 #+begin_src emacs-lisp
@@ -529,7 +534,9 @@ Rainbow mode turns on the colored parentheses
 Disable long summary warning
 #+begin_src emacs-lisp
 (after! magit
-  (setq git-commit-style-convention-checks nil)
+  (setq git-commit-style-convention-checks nil
+        magit-diff-hide-trailing-cr-characters t
+        )
   )
 #+end_src
 
