--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -14,7 +14,7 @@ Setting name and email address
 ** Font
 Setting font family
 #+begin_src emacs-lisp
-(setq doom-font (font-spec :family "Fira Code"
+(setq doom-font (font-spec :family "JetBrainsMono Nerd Font"
                            :size 13
                            ))
 (setq ns-use-thin-smoothing t)
@@ -154,13 +154,12 @@ Disable spell checking by default
 
 Disable titlebar message
 #+begin_src emacs-lisp
-(add-to-list 'default-frame-alist '(ns-transparent-titlebar . t))
-(add-to-list 'default-frame-alist '(ns-appearance . dark)) ;; assuming you are using a dark theme
 (setq ns-use-proxy-icon nil
       frame-title-format nil
       )
+;; Helps disable the annoying titlebar dimension
+(add-to-list 'initial-frame-alist '(fullscreen . fullheight))
 #+end_src
-
 
 Other defaults
 #+begin_src emacs-lisp
@@ -444,12 +443,12 @@ Minimized the popup factor of format error
 
 Enabled formatting for the following modes. Use yapf formatting for python
 #+begin_src emacs-lisp
+(add-hook 'python-mode-hook #'format-all-mode)
+(add-hook 'emacs-lisp-mode #'format-all-mode)
+(add-hook 'tex-mode #'format-all-mode)
+(add-hook 'latex-mode #'format-all-mode)
 (after! format-all
   ;;   (set-formatter! 'yapf "yapf -q " :modes'(python-mode))
-  (add-hook 'python-mode-hook #'format-all-mode)
-  (add-hook 'emacs-lisp-mode #'format-all-mode)
-  (add-hook 'tex-mode #'format-all-mode)
-  (add-hook 'latex-mode #'format-all-mode)
   )
 #+end_src
 
