--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -197,7 +197,7 @@ Setting LSP
 
   )
 (after! lsp-ui
-  (lsp-ui-sideline-mode -1) ; flycheck is better
+  ;; (lsp-ui-sideline-mode -1) ; flycheck is better
   (setq
    lsp-ui-sideline-enable nil
    lsp-ui-doc-enable nil
