--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -193,6 +193,8 @@ Setting LSP
    lsp-idle-delay 0.5
    lsp-enable-symbol-highlighting nil
    lsp-eldoc-enable-hover nil
+   +lsp-company-backends
+   '(:separate company-capf company-yasnippet)
    )
 
   )
@@ -214,7 +216,7 @@ Setting LSP
   )
 #+end_src
 
-*** TODO Python
+*** Python
 Setting lsp settings for pyright
 #+begin_src emacs-lisp
 (after! lsp-pyright
@@ -223,35 +225,12 @@ Setting lsp settings for pyright
         lsp-pyright-use-library-code-for-types t
         lsp-pyright-diagnostic-mode "workspace"
         )
-  ;; (lsp-register-client
-  ;;   (make-lsp-client
-  ;;     :new-connection (lsp-tramp-connection (lambda ()
-  ;;                                     (cons "pyright-langserver"
-  ;;                                           lsp-pyright-langserver-command-args)))
-  ;;     :major-modes '(python-mode)
-  ;;     :remote? t
-  ;;     :server-id 'pyright-remote
-  ;;     :multi-root t
-  ;;     :priority 3
-  ;;     :initialization-options (lambda () (ht-merge (lsp-configuration-section "pyright")
-  ;;                                                  (lsp-configuration-section "python")))
-  ;;     :initialized-fn (lambda (workspace)
-  ;;                       (with-lsp-workspace workspace
-  ;;                         (lsp--set-configuration
-  ;;                         (ht-merge (lsp-configuration-section "pyright")
-  ;;                                   (lsp-configuration-section "python")))))
-  ;;     :download-server-fn (lambda (_client callback error-callback _update?)
-  ;;                           (lsp-package-ensure 'pyright callback error-callback))
-  ;;     :notification-handlers (lsp-ht ("pyright/beginProgress" 'lsp-pyright--begin-progress-callback)
-  ;;                                   ("pyright/reportProgress" 'lsp-pyright--report-progress-callback)
-  ;;                                   ("pyright/endProgress" 'lsp-pyright--end-progress-callback))))
   )
 #+end_src
 
 Disable triggering characters
 #+begin_src emacs-lisp
 (add-hook! 'lsp-pyright-after-open-hook
-
            (lsp:set-completion-options-trigger-characters?
             (lsp:server-capabilities-completion-provider?
              (lsp--workspace-server-capabilities (cl-first
@@ -285,6 +264,7 @@ Disable SPC as a trigger key
                                                   (lsp-workspaces)
                                                   )))
             ["=" "$" "-"])
+           (setq company-capf--sorted nil)
            )
 #+end_src
 
