--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -15,7 +15,7 @@ Setting name and email address
 Setting font family
 #+begin_src emacs-lisp
 (setq doom-font (font-spec :family "JetBrainsMono Nerd Font"
-                           :size 13
+                           :size 12
                            ))
 (setq ns-use-thin-smoothing t)
 #+end_src
@@ -79,17 +79,20 @@ Use relative line number
 ;; Also in visual mode
 (define-key evil-visual-state-map "j" 'evil-next-visual-line)
 (define-key evil-visual-state-map "k" 'evil-previous-visual-line)
+;;(define-key evil-motion-state-map (kbd "cc") 'evilnc-comment-or-uncomment-lines)
+
 ;; Scroll off
-(setq scroll-margin 3)
+(setq scroll-margin 8)
 #+end_src
 
 ** Keybindings
 Toggle settings
 #+begin_src emacs-lisp
 (map!
+ :n "C-s" (cmd! (+vterm/toggle 1))
  :leader
  :desc "Toggle Comment" "c SPC" (lambda ()(interactive)(evilnc-comment-or-uncomment-lines -1))
- :desc "Toggle Terminal" "j" (lambda ()(interactive)(+popup/toggle))
+ ;;:desc "Toggle Terminal" "j" (lambda ()(interactive)(+popup/toggle))
  :desc "Toggle line highlight" "t h" #'global-hl-line-mode
  )
 #+end_src
@@ -193,8 +196,8 @@ Setting LSP
    lsp-idle-delay 0.5
    lsp-enable-symbol-highlighting nil
    lsp-eldoc-enable-hover nil
-   +lsp-company-backends
-   '(:separate company-capf company-yasnippet)
+   ;; +lsp-company-backends
+   ;; '(:separate company-capf company-yasnippet)
    )
 
   )
@@ -230,14 +233,14 @@ Setting lsp settings for pyright
 
 Disable triggering characters
 #+begin_src emacs-lisp
-(add-hook! 'lsp-pyright-after-open-hook
-           (lsp:set-completion-options-trigger-characters?
-            (lsp:server-capabilities-completion-provider?
-             (lsp--workspace-server-capabilities (cl-first
-                                                  (lsp-workspaces)
-                                                  )))
-            [])
- )
+;; (add-hook! 'lsp-pyright-after-open-hook
+;;            (lsp:set-completion-options-trigger-characters?
+;;             (lsp:server-capabilities-completion-provider?
+;;              (lsp--workspace-server-capabilities (cl-first
+;;                                                   (lsp-workspaces)
+;;                                                   )))
+;;             [])
+;;  )
 #+end_src
 
 *** Latex
