--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -59,7 +59,8 @@
 ** Line
 *** Use relative line number
 #+begin_src emacs-lisp
-(setq display-line-numbers-type 'visual)
+;; (setq display-line-numbers-type 'visual)
+(setq display-line-numbers-type 'nil)
 ;; Make evil-mode up/down operate in screen lines instead of logical lines
 (define-key evil-motion-state-map "j" 'evil-next-visual-line)
 (define-key evil-motion-state-map "k" 'evil-previous-visual-line)
@@ -96,6 +97,7 @@ Use 'dh', 'dj', 'dk', 'dl' to navigate buffers
     "l" #'evil-window-right
     )
   )
+(general-vmap "d" 'evil-delete)
 ;; FIXME: currently now working for some reason
 ;; (after! 'evil-org
 ;;   (general-nmap
@@ -116,10 +118,9 @@ Use 'dh', 'dj', 'dk', 'dl' to navigate buffers
 (general-nmap "s"
   (general-key-dispatch 'evil-substitute
     "d" #'evil-window-delete
-    "s" #'evil-save
+    "s" #'save-buffer
     )
   )
-
 #+end_src
 
 *** Toggle comment
@@ -127,6 +128,7 @@ Use 'dh', 'dj', 'dk', 'dl' to navigate buffers
 (general-nmap "c" (general-key-dispatch 'evil-change
                     "c" #'evilnc-comment-or-uncomment-lines
                     ))
+(general-vmap "c" 'evil-change)
 #+end_src
 
 *** 2 Char Search
